--- a/ui/index.html
+++ b/ui/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="" data-bs-theme="light">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +8,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <title>Boiler Books</title>
   </head>
-  <body data-bs-theme="light">
+  <body>
     <noscript>
       <strong>We're sorry but Boiler Books doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <script>
+      // load the stored theme (if exists) first to avoid some flashes
+      const theme = localStorage.getItem("bb_bs_theme");
+      if (theme !== null)
+      {
+        document.documentElement.setAttribute('data-bs-theme', theme);
+      }
+    </script>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
